# posemir

./: .bumpversion.cfg  .gitignore  Cargo.toml  LICENSE.txt  README.md
.dvc/: config
.github/workflows/: main.yml  master.yml  pull_request.yml
benchmark/: Cargo.toml  README.md  criterion.toml
benchmark/benches/: sia_benchmarks.rs  siar_benchmarks.rs  siatec_benchmarks.rs  siatec_c_benchmarks.rs  siatec_ch_benchmarks.rs  siatec_dr_benchmarks.rs
benchmark/benches/data/: .gitignore  max_pattern_count.dvc  random.dvc
benchmark/data/: min_pattern_count.dvc
benchmark/src/: config.rs  data_loader.rs  lib.rs  main.rs  mtp_benchmark.rs  tec_benchmark.rs
point_set_algorithms/: Cargo.toml
point_set_algorithms/src/: lib.rs  mtp_algorithm.rs  sia.rs  siar.rs  siatec.rs  siatec_c.rs  tec_algorithm.rs  utilities.rs
point_set_algorithms/src/io/: csv.rs
point_set_algorithms/src/point_set/: mod.rs  mtp.rs  pattern.rs  point.rs  point_set.rs  tec.rs
posemir/: Cargo.toml  README.md
posemir/src/: heuristic.rs  lib.rs  sia.rs  siar.rs  siatec_c.rs
posemir/src/discovery/: cosiatec.rs  mod.rs  sia.rs  siar.rs  siatec.rs  siatec_c.rs  siatec_ch.rs  siatec_compress.rs  utilities.rs
posemir/src/io/: csv.rs  json.rs
posemir/src/point_set/: pattern.rs  point.rs  set.rs  tec.rs
posemir/src/search/: exact_matcher.rs  mod.rs  partial_matcher.rs  pattern_matcher.rs
posemir_cli/: Cargo.toml  README.md
posemir_cli/src/: application.rs  main.rs
posemir_discovery/: Cargo.toml  README.md
posemir_discovery/src/: algorithm.rs  cosiatec.rs  heuristic.rs  lib.rs  sia.rs  siar.rs  siatec.rs  siatec_c.rs  siatec_ch.rs  siatec_compress.rs  tec_algorithm.rs  utilities.rs
posemir_discovery/src/io/: csv.rs  json.rs  mod.rs
posemir_discovery/src/point_set/: mod.rs  mtp.rs  pattern.rs  point.rs  point_set.rs  tec.rs
posemirpy/: Cargo.toml  README.md  pyproject.toml
