[package]
name = "benchmark"
version = "0.1.5"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
edition = "2021"

[dependencies]
posemir_discovery = { path = "../posemir_discovery" }
criterion = "0.3.5"

[dev-dependencies]
cargo-criterion = "1.1.0"

[[bench]]
name = "sia_benchmarks"
harness = false

[[bench]]
name = "siar_benchmarks"
harness = false

[[bench]]
name = "siatec_benchmarks"
harness = false

[[bench]]
name = "siatec_c_benchmarks"
harness = false

[[bench]]
name = "siatec_ch_benchmarks"
harness = false
