[package]
name = "benchmark"
version = "0.2.10"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
edition = "2021"

[dependencies]
posemir = { path = "../posemir" }
criterion = "0.5.1"

[[bench]]
name = "sia_benchmarks"
harness = false

[[bench]]
name = "siar_benchmarks"
harness = false

[[bench]]
name = "siatec_benchmarks"
harness = false

[[bench]]
name = "siatec_c_benchmarks"
harness = false

[[bench]]
name = "siatec_ch_benchmarks"
harness = false
