[package]
name = "posemir"
version = "0.2.9"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde_json = "1.0"
hashers = "1.0.1"

[dev-dependencies]
tempfile = "3.2"
